# game.libretro.dolphin

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/dolphin/: 0001-patch-Install-the-built-library.patch  CMakeLists.txt  dolphin.txt  flags.txt
game.libretro.dolphin/: addon.xml  addon.xml.in
game.libretro.dolphin/resources/: settings.xml
game.libretro.dolphin/resources/language/English/: strings.po
